AFS_Dev/src/objects/Custom_Schedules__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OpportunityLineItemId__c</fullName>
        <label>Opp Line Item Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScheduleDate__c</fullName>
        <label>Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Custom Schedule</label>
    <nameField>
        <displayFormat>Sched-{0000000000}</displayFormat>
        <label>Schedules Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>